--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
             <div class="hero-content">
                 <h1>Fast & Reliable Delivery in Laredo</h1>
                 <p>Your trusted partner for local deliveries, furniture moving, and emergency services.</p>
+                <p class="hero-highlight">Free Quotes Available - Call or Text Us!</p>
                 <div class="cta-buttons">
-                    <a href="tel:+19569992944" class="primary-button">Schedule Now</a>
-                    <a href="#services" class="secondary-button">Learn More</a>
+                    <a href="tel:+19569992944" class="primary-button">Call Now</a>
+                    <a href="sms:+19569992944" class="secondary-button">Text Us</a>
                 </div>
             </div>
         </section>
@@ -91,7 +92,21 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
-                        <p>Call us at: <a href="tel:+19569992944">(956) 999-2944</a></p>
+                        <div class="contact-text">
+                            <p>Call or Text us at: <a href="tel:+19569992944">(956) 999-2944</a></p>
+                            <p class="contact-note">Free quotes available!</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-comment-dots"></i>
+                        <div class="contact-text">
+                            <p>Text us for:</p>
+                            <ul class="contact-list">
+                                <li>Quick quotes</li>
+                                <li>Scheduling</li>
+                                <li>Service inquiries</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-clock"></i>
@@ -120,8 +135,9 @@
             </div>
             <div class="footer-section">
                 <h3>Contact</h3>
-                <p>Phone: (956) 999-2944</p>
+                <p>Call or Text: (956) 999-2944</p>
                 <p>Available 24/7</p>
+                <p class="footer-highlight">Free Quotes Available!</p>
             </div>
         </div>
         <div class="footer-bottom">
