--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
                         <span class="slider"></span>
                     </label>
                 </li>
+                <li>
+                    <button class="lang-toggle" id="langToggle">
+                        <span class="lang-text">EN</span>
+                        <i class="fas fa-globe"></i>
+                    </button>
+                </li>
             </ul>
             <button class="mobile-menu-toggle">
                 <i class="fas fa-bars"></i>
@@ -73,6 +79,10 @@
                     <span class="slider"></span>
                 </label>
             </div>
+            <button class="lang-toggle-mobile" id="langToggleMobile">
+                <span class="lang-text">EN</span>
+                <i class="fas fa-globe"></i>
+            </button>
         </nav>
     </div>
 
@@ -160,6 +170,272 @@
             </div>
         </section>
 
+        <!-- Vehicle Showcase Section -->
+        <section class="vehicle-showcase">
+            <div class="container">
+                <h2>Our Vehicle</h2>
+                <div class="vehicle-content">
+                    <div class="vehicle-info">
+                        <h3>2018 Freightliner Sprinter 2500</h3>
+                        <ul class="vehicle-specs">
+                            <li><i class="fas fa-truck-loading"></i> High Roof Cargo Van</li>
+                            <li><i class="fas fa-ruler"></i> Extended Length for Maximum Capacity</li>
+                            <li><i class="fas fa-box"></i> Professional-Grade Cargo Space</li>
+                            <li><i class="fas fa-shield-alt"></i> Well-Maintained & Reliable</li>
+                        </ul>
+                        <p class="vehicle-description">
+                            Our Freightliner Sprinter Van is specially equipped to handle all your delivery needs with care and efficiency. 
+                            Whether it's furniture, appliances, or sensitive items, we ensure safe and secure transportation.
+                        </p>
+                    </div>
+                    <div class="vehicle-image">
+                        <img src="image/sprinter-van.jpg" alt="2018 Freightliner Sprinter Van" 
+                             onerror="this.src='https://images.unsplash.com/photo-1566576912321-d58ddd7a6088?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80'">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- FAQ Section -->
+        <section id="faq" class="faq-section">
+            <div class="container">
+                <h2 class="gradient-text">Frequently Asked Questions</h2>
+                <div class="faq-grid">
+                    <div class="faq-card glass">
+                        <div class="faq-item">
+                            <div class="faq-question">
+                                <h3>What areas do you serve?</h3>
+                                <button class="faq-toggle">
+                                    <i class="fas fa-chevron-down"></i>
+                                </button>
+                            </div>
+                            <div class="faq-answer">
+                                <p>We primarily serve the greater Laredo area and surrounding regions. For long-distance deliveries, we offer custom quotes based on distance and requirements.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="faq-card glass">
+                        <div class="faq-item">
+                            <div class="faq-question">
+                                <h3>What are your rates?</h3>
+                                <button class="faq-toggle">
+                                    <i class="fas fa-chevron-down"></i>
+                                </button>
+                            </div>
+                            <div class="faq-answer">
+                                <p>Our rates are based on distance, item size, and service type. We offer flat rates for common jobs and custom quotes for specific needs. Contact us for a free quote!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="faq-card glass">
+                        <div class="faq-item">
+                            <div class="faq-question">
+                                <h3>Do you offer same-day delivery?</h3>
+                                <button class="faq-toggle">
+                                    <i class="fas fa-chevron-down"></i>
+                                </button>
+                            </div>
+                            <div class="faq-answer">
+                                <p>Yes! We offer same-day delivery services during our regular hours (7AM-6PM) and emergency services after hours (6PM-10PM), subject to availability.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="faq-card glass">
+                        <div class="faq-item">
+                            <div class="faq-question">
+                                <h3>What items can you transport?</h3>
+                                <button class="faq-toggle">
+                                    <i class="fas fa-chevron-down"></i>
+                                </button>
+                            </div>
+                            <div class="faq-answer">
+                                <p>We can transport furniture, appliances, packages, groceries, and most household items. For special items or heavy lifting requirements, please contact us for details.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="faq-card glass">
+                        <div class="faq-item">
+                            <div class="faq-question">
+                                <h3>How do I schedule a delivery?</h3>
+                                <button class="faq-toggle">
+                                    <i class="fas fa-chevron-down"></i>
+                                </button>
+                            </div>
+                            <div class="faq-answer">
+                                <p>You can schedule a delivery by calling or texting us at (956) 999-2944. We'll discuss your needs and provide a quote. For immediate service, call us directly.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="faq-card glass">
+                        <div class="faq-item">
+                            <div class="faq-question">
+                                <h3>What payment methods do you accept?</h3>
+                                <button class="faq-toggle">
+                                    <i class="fas fa-chevron-down"></i>
+                                </button>
+                            </div>
+                            <div class="faq-answer">
+                                <p>We accept Cash, Zelle, Venmo, and Cash App. Payment is typically required upon delivery completion unless otherwise arranged.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Service Area Map Section -->
+        <section id="service-area" class="service-area-section">
+            <div class="container">
+                <h2 class="gradient-text">Service Area</h2>
+                <div class="service-area-content">
+                    <div class="map-container">
+                        <div id="serviceMap"></div>
+                        <div class="map-overlay">
+                            <div class="coming-soon-message">
+                                <i class="fas fa-map-marked-alt"></i>
+                                <h3>Interactive Map Coming Soon!</h3>
+                                <p>We're working on bringing you an interactive service area map.</p>
+                                <p class="coming-soon-note">For now, please refer to our coverage zones listed below.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="area-info glass">
+                        <h3>Coverage Zones</h3>
+                        <div class="zone-list">
+                            <div class="zone-item">
+                                <div class="zone-color" style="background: #4CAF50;"></div>
+                                <div class="zone-details">
+                                    <h4>Zone 1 - Local</h4>
+                                    <p>Laredo Metro Area (0-20 miles)</p>
+                                </div>
+                            </div>
+                            <div class="zone-item">
+                                <div class="zone-color" style="background: #2196F3;"></div>
+                                <div class="zone-details">
+                                    <h4>Zone 2 - Extended</h4>
+                                    <p>Surrounding Areas (21-50 miles)</p>
+                                </div>
+                            </div>
+                            <div class="zone-item">
+                                <div class="zone-color" style="background: #FFC107;"></div>
+                                <div class="zone-details">
+                                    <h4>Zone 3 - Regional</h4>
+                                    <p>Extended Range (51-100 miles)</p>
+                                </div>
+                            </div>
+                            <div class="zone-item">
+                                <div class="zone-color" style="background: #9C27B0;"></div>
+                                <div class="zone-details">
+                                    <h4>Zone 4 - Statewide</h4>
+                                    <p>All of Texas</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="zone-note">
+                            <i class="fas fa-info-circle"></i>
+                            <p>Contact us for a custom quote based on your specific delivery needs. We provide competitive rates for all distances.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Quote Request Form Section -->
+        <section id="quote" class="quote-section">
+            <div class="container">
+                <h2 class="gradient-text">Request a Quote</h2>
+                <div class="quote-content">
+                    <div class="quote-info glass">
+                        <h3><i class="fas fa-calculator"></i> Get Your Free Quote</h3>
+                        <p>Fill out the form for a quick estimate. We'll get back to you within 1 hour during business hours.</p>
+                        <ul class="quote-benefits">
+                            <li><i class="fas fa-check-circle"></i> Fast Response Time</li>
+                            <li><i class="fas fa-check-circle"></i> Accurate Estimates</li>
+                            <li><i class="fas fa-check-circle"></i> No Obligation</li>
+                            <li><i class="fas fa-check-circle"></i> Competitive Rates</li>
+                        </ul>
+                        <div class="temp-notice">
+                            <p><i class="fas fa-info-circle"></i> Online quote form coming soon!</p>
+                            <p>For now, please call or text <a href="tel:+19569992944">(956) 999-2944</a> for a quick quote.</p>
+                        </div>
+                    </div>
+                    <form id="quoteForm" class="quote-form glass" style="position: relative;">
+                        <div class="form-overlay">
+                            <div class="coming-soon-message">
+                                <i class="fas fa-tools"></i>
+                                <h3>Coming Soon!</h3>
+                                <p>Our online quote system is under development.</p>
+                                <a href="tel:+19569992944" class="button button-primary">
+                                    <i class="fas fa-phone"></i> Call for Quote: (956) 999-2944
+                                </a>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="name">Full Name</label>
+                            <input type="text" id="name" name="name" required>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="phone">Phone Number</label>
+                                <input type="tel" id="phone" name="phone" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email (Optional)</label>
+                                <input type="email" id="email" name="email">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="pickup">Pickup Location</label>
+                                <input type="text" id="pickup" name="pickup" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="delivery">Delivery Location</label>
+                                <input type="text" id="delivery" name="delivery" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="itemType">Item Type</label>
+                            <select id="itemType" name="itemType" required>
+                                <option value="">Select Item Type</option>
+                                <option value="furniture">Furniture</option>
+                                <option value="appliance">Appliance</option>
+                                <option value="package">Package</option>
+                                <option value="groceries">Groceries</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="details">Additional Details</label>
+                            <textarea id="details" name="details" rows="3" placeholder="Item dimensions, weight, special handling requirements, etc."></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="preferredDate">Preferred Date (Optional)</label>
+                            <input type="date" id="preferredDate" name="preferredDate">
+                        </div>
+                        <div class="form-group">
+                            <label for="preferredTime">Preferred Time (Optional)</label>
+                            <select id="preferredTime" name="preferredTime">
+                                <option value="">Select Preferred Time</option>
+                                <option value="morning">Morning (7AM - 11AM)</option>
+                                <option value="afternoon">Afternoon (11AM - 3PM)</option>
+                                <option value="evening">Evening (3PM - 6PM)</option>
+                                <option value="after-hours">After Hours (6PM - 10PM)</option>
+                            </select>
+                        </div>
+                        <button type="submit" class="button button-primary">
+                            <i class="fas fa-paper-plane"></i> Submit Quote Request
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </section>
+
         <!-- Contact Section -->
         <section id="contact">
             <h2>Contact Us</h2>
@@ -198,6 +474,23 @@
                 </div>
             </div>
         </section>
+
+        <!-- Reviews Section -->
+        <section id="reviews" class="reviews-section">
+            <div class="container">
+                <h2 class="gradient-text">Customer Reviews</h2>
+                <div class="reviews-container">
+                    <div class="reviews-wrapper" id="reviewsWrapper">
+                        <!-- Coming Soon Message -->
+                        <div class="no-reviews-message">
+                            <i class="fas fa-tools"></i>
+                            <p>Reviews Feature Coming Soon!</p>
+                            <p class="coming-soon-note">We're working on bringing you a great review system. Check back soon!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -218,6 +511,14 @@
                 <h3 class="gradient-text">Contact</h3>
                 <p class="footer-highlight">(956) 999-2944</p>
                 <div class="footer-social">
+                    <a href="#" class="social-link disabled" title="Facebook Coming Soon">
+                        <i class="fab fa-facebook"></i>
+                        <span class="coming-soon-tag">Coming Soon</span>
+                    </a>
+                    <a href="#" class="social-link disabled" title="Instagram Coming Soon">
+                        <i class="fab fa-instagram"></i>
+                        <span class="coming-soon-tag">Coming Soon</span>
+                    </a>
                     <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -241,5 +542,6 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initializeServiceMap" async defer></script>
 </body>
 </html> 
